// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Field > 🐴 FieldStatus status  default 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 FieldStatus status  error 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 FieldStatus status  processing 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 FieldStatus status  success 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 FieldStatus status  warning 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 FieldStatus status Default 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 FieldStatus status Error 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 FieldStatus status Processing 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 FieldStatus status Success 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 FieldStatus status Warning 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 FieldTimePicker text support is null 1`] = `
<DocumentFragment>
  <span>
    -
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 ProFieldBadgeColor status 1`] = `
<DocumentFragment>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper css-var-root"
  >
    <span
      class="ant-badge-status-dot"
      style="color: #1890ff; background: #1890ff;"
    />
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 base use 1`] = `
<DocumentFragment>
  <div
    class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined"
  >
    <input
      autocomplete="off"
      class="ant-input-number-input"
      placeholder="请输入"
      role="spinbutton"
      step="1"
      value=""
    />
    <div
      class="ant-input-number-actions"
    >
      <span
        aria-disabled="false"
        aria-label="Increase Value"
        class="ant-input-number-action ant-input-number-action-up"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="up"
          class="anticon anticon-up"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-disabled="false"
        aria-label="Decrease Value"
        class="ant-input-number-action ant-input-number-action-down"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 1`] = `
<DocumentFragment>
  <div
    class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined"
  >
    <input
      autocomplete="off"
      class="ant-input-number-input"
      placeholder="Please enter"
      role="spinbutton"
      step="1"
      value=""
    />
    <div
      class="ant-input-number-actions"
    >
      <span
        aria-disabled="false"
        aria-label="Increase Value"
        class="ant-input-number-action ant-input-number-action-up"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="up"
          class="anticon anticon-up"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-disabled="false"
        aria-label="Decrease Value"
        class="ant-input-number-action ant-input-number-action-down"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 2`] = `
<DocumentFragment>
  <span>
    100.00
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 3`] = `
<DocumentFragment>
  <span>
    $100.00
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 4`] = `
<DocumentFragment>
  <div
    class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined"
  >
    <input
      autocomplete="off"
      class="ant-input-number-input"
      placeholder="Введите значение"
      role="spinbutton"
      step="1"
      value=""
    />
    <div
      class="ant-input-number-actions"
    >
      <span
        aria-disabled="false"
        aria-label="Increase Value"
        class="ant-input-number-action ant-input-number-action-up"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="up"
          class="anticon anticon-up"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-disabled="false"
        aria-label="Decrease Value"
        class="ant-input-number-action ant-input-number-action-down"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 5`] = `
<DocumentFragment>
  <span>
    100,00 ₽
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 6`] = `
<DocumentFragment>
  <span>
    ₽100,00 ₽
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 7`] = `
<DocumentFragment>
  <div
    class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined"
  >
    <input
      autocomplete="off"
      class="ant-input-number-input"
      placeholder="Sila masuk"
      role="spinbutton"
      step="1"
      value=""
    />
    <div
      class="ant-input-number-actions"
    >
      <span
        aria-disabled="false"
        aria-label="Increase Value"
        class="ant-input-number-action ant-input-number-action-up"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="up"
          class="anticon anticon-up"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-disabled="false"
        aria-label="Decrease Value"
        class="ant-input-number-action ant-input-number-action-down"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 8`] = `
<DocumentFragment>
  <span>
    100.00
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 9`] = `
<DocumentFragment>
  <span>
    RM100.00
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 10`] = `
<DocumentFragment>
  <div
    class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined"
  >
    <input
      autocomplete="off"
      class="ant-input-number-input"
      placeholder="Molimo unesite"
      role="spinbutton"
      step="1"
      value=""
    />
    <div
      class="ant-input-number-actions"
    >
      <span
        aria-disabled="false"
        aria-label="Increase Value"
        class="ant-input-number-action ant-input-number-action-up"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="up"
          class="anticon anticon-up"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-disabled="false"
        aria-label="Decrease Value"
        class="ant-input-number-action ant-input-number-action-down"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 11`] = `
<DocumentFragment>
  <span>
    100 RSD
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 money valueType is Object 12`] = `
<DocumentFragment>
  <span>
    RSD100 RSD
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 options support dom list 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-field-option"
    style="display: flex; gap: 16px; align-items: center;"
  >
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        新 建
      </span>
    </button>
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        修 改
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Field > 🐴 options support dom text 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-field-option"
    style="display: flex; gap: 16px; align-items: center;"
  >
    新建
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        修 改
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Field > 🐴 options support empty dom 1`] = `<DocumentFragment />`;

exports[`Field > 🐴 options support no text 1`] = `<DocumentFragment />`;

exports[`Field > 🐴 options support one dom 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-field-option"
    style="display: flex; gap: 16px; align-items: center;"
  >
    <button
      class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        新 建
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Field > 🐴 percent support unit string 1`] = `
<DocumentFragment>
  <span>
    + 100.00%
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 percent valueType is Object 1`] = `
<DocumentFragment>
  <div
    class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined"
  >
    <input
      autocomplete="off"
      class="ant-input-number-input"
      placeholder="请输入"
      role="spinbutton"
      step="1"
      value=""
    />
    <div
      class="ant-input-number-actions"
    >
      <span
        aria-disabled="false"
        aria-label="Increase Value"
        class="ant-input-number-action ant-input-number-action-up"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="up"
          class="anticon anticon-up"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-disabled="false"
        aria-label="Decrease Value"
        class="ant-input-number-action ant-input-number-action-down"
        role="button"
        unselectable="on"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field > 🐴 percent=0 1`] = `
<DocumentFragment>
  <span
    style="color: #595959;"
  >
     0.00%
  </span>
</DocumentFragment>
`;

exports[`Field > 🐴 progress support no number 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="NaN"
    class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info ant-progress-small css-var-root"
    role="progressbar"
    style="min-width: 100px; max-width: 320px;"
  >
    <div
      class="ant-progress-body"
      style="width: 100%;"
    >
      <div
        class="ant-progress-rail"
        style="height: 6px;"
      >
        <div
          class="ant-progress-track"
          style="width: 0%; height: 6px;"
        />
      </div>
      <span
        class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
        title="0%"
      >
        0%
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field > 🐴 progress support string number 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="12"
    class="ant-progress ant-progress-status-active ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info ant-progress-small css-var-root"
    role="progressbar"
    style="min-width: 100px; max-width: 320px;"
  >
    <div
      class="ant-progress-body"
      style="width: 100%;"
    >
      <div
        class="ant-progress-rail"
        style="height: 6px;"
      >
        <div
          class="ant-progress-track"
          style="width: 12%; height: 6px;"
        />
      </div>
      <span
        class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
        title="12%"
      >
        12%
      </span>
    </div>
  </div>
</DocumentFragment>
`;
